Fix screenshot title on smaller screens.

--- a/client/app/styles/_screenshots.scss
+++ b/client/app/styles/_screenshots.scss
@@ -69,6 +69,17 @@
         line-height: 50px;
         margin-top: -10px;
 
+        @media (max-width: 320px) {
+          font-size: 24px;
+          line-height: 18px;
+          margin-top: 0;
+
+        }
+
+        @media (min-width: 321px) and (max-width: 768px) {
+          font-size: 32px;
+        }
+
         input {
           vertical-align: middle;
         }
